--- a/lockout_server/lockout/templates/index.html
+++ b/lockout_server/lockout/templates/index.html
@@ -5,10 +5,8 @@
     <title>Index</title>
 </head>
 <body>
-<a href="{{ url_for('.add_user') }}">Add user</a><br>
-<a href="{{ url_for('.add_machine') }}">Add machine</a><br>
-<a href="{{ url_for('.add_training') }}">Add training</a><br>
-<a href="{{ url_for('.view_log') }}">View log</a><br>
 
+
+<p>Big tacos
 </body>
 </html>
