More updates to the web interface and server code

--- a/lockout_server/lockout/templates/systemlog.html
+++ b/lockout_server/lockout/templates/systemlog.html
@@ -26,6 +26,7 @@
 </nav>
 
 <article class="article">
+<a href="logfile.csv" class="myButton btn-work width">Download Logfile</a></li>
 <table class="table-fill">
 <thead>
 <tr>
@@ -50,7 +51,8 @@
 </table>
 </article>
 
-<footer></footer>
+<footer>
+</footer>
 </div>
 
 </body>
