--- a/lockout_server/lockout/templates/systemstatus.html
+++ b/lockout_server/lockout/templates/systemstatus.html
@@ -37,36 +37,16 @@
 </tr>
 </thead>
 <tbody class="table-hover">
+
+{% for m in machs %}
 <tr>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
+<td class="text-left">{{ m[0] }}</td>
+<td class="text-left">{{ m[1] }}</td>
+<td class="text-left">{{ m[3] }}</td>
+<td class="text-left">--</td>
 </tr>
-<tr>
-<td class="text-left">February</td>
-<td class="text-left">$ 10,000.00</td>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
-<tr>
-<td class="text-left">March</td>
-<td class="text-left">$ 85,000.00</td>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
-<tr>
-<td class="text-left">April</td>
-<td class="text-left">$ 56,000.00</td>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
-<tr>
-<td class="text-left">May</td>
-<td class="text-left">$ 98,000.00</td>
-<td class="text-left">January</td>
-<td class="text-left">$ 50,000.00</td>
-</tr>
+{% endfor %}
+
 </tbody>
 </table>
 </article>
