Made some minor updates to the web pages. Added a gitignore to ignore pyc files. Removed an unused file

--- a/lockout_server/lockout/templates/machines.html
+++ b/lockout_server/lockout/templates/machines.html
@@ -29,7 +29,7 @@
 <table class="table-fill">
 <thead>
 <tr>
-<th class="text-left">Machine Number </th>
+<th class="text-left">&#35</th>
 <th class="text-left">Machine Name</th>
 <th class="text-left">Status</th>
 </tr>
