Final commit of Spring 17 Senior Design

--- a/lockout_server/web_server/templates/machines.html
+++ b/lockout_server/web_server/templates/machines.html
@@ -32,6 +32,8 @@
 <th class="text-left">&#35</th>
 <th class="text-left">Machine Name</th>
 <th class="text-left">Status</th>
+<th class="text-left">User</th>
+<th class="text-left">Unlock Time</th>
 </tr>
 </thead>
 <tbody class="table-hover">
@@ -40,7 +42,9 @@
 <tr>
 <td class="text-left">{{ m[0] }}</td>
 <td class="text-left">{{ m[1] }}</td>
+<td class="text-left">{{ m[5] }}</td>
 <td class="text-left">{{ m[3] }}</td>
+<td class="text-left">{{ m[6] }}</td>
 </tr>
 {% endfor %}
 
