--- a/lockout_server/web_server/templates/systemstatus.html
+++ b/lockout_server/web_server/templates/systemstatus.html
@@ -42,8 +42,8 @@
 <tr>
 <td class="text-left">{{ m[0] }}</td>
 <td class="text-left">{{ m[1] }}</td>
+<td class="text-left">{{ m[5] }}</td>
 <td class="text-left">{{ m[3] }}</td>
-<td class="text-left">--</td>
 </tr>
 {% endfor %}
 
